minor fix on package json

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "https://twitter.com/Yinigma13"
   },
   "keywords": [
-	"Lethal Company", "Enemy", "Skin," "Kit"
+	"Lethal Company", "Enemy", "Skin", "Kit"
   ],
   "type": "tool",
   "hideInEditor": false,
